force-app/main/default/objects/Account/fields/Appointed_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointed_Date__c</fullName>
    <label>Appointed Date</label>
    <type>Date</type>
</CustomField>