force-app/main/default/objects/Account/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <externalId>true</externalId>
    <label>Available Stock</label>
    <length>90</length>
    <type>Text</type>
</CustomField>