force-app/main/default/objects/Account/fields/Bank_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee__c</fullName>
    <label>Bank Guarantee</label>
    <length>32</length>
    <type>Text</type>
</CustomField>