force-app/main/default/objects/Account/fields/BPR_code__c.field-meta.xml
<CustomField>
    <fullName>BPR_code__c</fullName>
    <label>BPR code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>