force-app/main/default/objects/Account/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgc_sync__Business_Area</valueSetName>
    </valueSet>
</CustomField>