force-app/main/default/objects/Account/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>Field is created so the account be able to buy and sell the products in this specific category only.</description>
    <label>Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>