force-app/main/default/objects/Account/fields/cgcloud__Number_Of_Extensions__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_Extensions__c</fullName>
    <description>Count of the CustomerExtension records.</description>
    <label>Number Of Extensions</label>
    <summaryForeignKey>cgcloud__Account_Extension__c.cgcloud__Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>