force-app/main/default/objects/Account/fields/De_Boarding_Reason__c.field-meta.xml
<CustomField>
    <fullName>De_Boarding_Reason__c</fullName>
    <label>De-Boarding Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>