force-app/main/default/objects/Account/fields/Deboard_Status__c.field-meta.xml
<CustomField>
    <fullName>Deboard_Status__c</fullName>
    <label>Deboard Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deboard initiated</fullName>
            </value>
            <value>
                <fullName>Request Approved</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>