force-app/main/default/objects/Account/fields/Initial_Investment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Investment__c</fullName>
    <label>Initial Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>