force-app/main/default/objects/Account/fields/orel_Deboard_Initiated__c.field-meta.xml
<CustomField>
    <fullName>orel_Deboard_Initiated__c</fullName>
    <label>orel Deboard Initiated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated by Distributor</fullName>
            </value>
            <value>
                <fullName>Initiated by Non-Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>