force-app/main/default/objects/Account/fields/Orel_NotDeboard__c.field-meta.xml
<CustomField>
    <fullName>Orel_NotDeboard__c</fullName>
    <formula>IF(
    !(ISPICKVAL(Orel_status__c, &apos;Freeze&apos;)), 
    true, 
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orel NotDeboard</label>
    <type>Checkbox</type>
</CustomField>