force-app/main/default/objects/Account/fields/Orel_status__c.field-meta.xml
<CustomField>
    <fullName>Orel_status__c</fullName>
    <label>Orel status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freeze</fullName>
            </value>
            <value>
                <fullName>Deboarded</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>