force-app/main/default/objects/Account/fields/orl_BG_Verified__c.field-meta.xml
<CustomField>
    <fullName>orl_BG_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BG Verified</label>
    <type>Checkbox</type>
</CustomField>