force-app/main/default/objects/Account/fields/ORL_Business_Area__c.field-meta.xml
<CustomField>
    <fullName>ORL_Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGMRA03 - KADAWATHA</fullName>
            </value>
            <value>
                <fullName>EGMRA01 - NEGAMBO</fullName>
            </value>
            <value>
                <fullName>EKDKD02 - GAMPOLA</fullName>
            </value>
            <value>
                <fullName>ESOMA02 - AGUNUKOLAPELESSA</fullName>
            </value>
            <value>
                <fullName>ESBRA01 - BALANGODA</fullName>
            </value>
            <value>
                <fullName>ECMCO02 - NUGEGODA</fullName>
            </value>
            <value>
                <fullName>ENWKG03 - NARAMMALA</fullName>
            </value>
            <value>
                <fullName>ECMCO05 - MORATUWA</fullName>
            </value>
            <value>
                <fullName>ENOAP06 - ANURADHAPURA - 2</fullName>
            </value>
            <value>
                <fullName>ESOMA03 - GALLE</fullName>
            </value>
            <value>
                <fullName>ESBRA02 - RATHNAPURA</fullName>
            </value>
            <value>
                <fullName>WCMB04 - PETTAH</fullName>
            </value>
            <value>
                <fullName>EKDKD06 - KANDY-2</fullName>
            </value>
            <value>
                <fullName>ENWKG06- CHILAW-2</fullName>
            </value>
            <value>
                <fullName>ESOMA04 - DENIYAYA</fullName>
            </value>
            <value>
                <fullName>EGMRA06 - MINUWANGODA</fullName>
            </value>
            <value>
                <fullName>ENOAP05 - MIHINTHALE - 2</fullName>
            </value>
            <value>
                <fullName>LCMCO01 - SRI-JAYAWARDANAPURA</fullName>
            </value>
            <value>
                <fullName>LCMCO07 - COL-WEST 1</fullName>
            </value>
            <value>
                <fullName>ESOMA05 - YAKKALAMULLA</fullName>
            </value>
            <value>
                <fullName>ESBRA03 - EMBILIPITIYA</fullName>
            </value>
            <value>
                <fullName>ECMCO09 - KOTTAWA</fullName>
            </value>
            <value>
                <fullName>LCMCO11 - KOTTAWA</fullName>
            </value>
            <value>
                <fullName>LGMRA13 - MINUWANGODA</fullName>
            </value>
            <value>
                <fullName>LGMRA03 - GAMPAHA</fullName>
            </value>
            <value>
                <fullName>LGMRA04 - HANWELLA</fullName>
            </value>
            <value>
                <fullName>EUVAM02 - DEHIATTAKANDIYA</fullName>
            </value>
            <value>
                <fullName>LKHKA02 - HORANA 2</fullName>
            </value>
            <value>
                <fullName>LKDKD01 - PERADENIYA</fullName>
            </value>
            <value>
                <fullName>LKHKA01 - HORANA 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>