force-app/main/default/objects/Account/fields/Orl_Retail_store_created__c.field-meta.xml
<CustomField>
    <fullName>Orl_Retail_store_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail store created</label>
    <type>Checkbox</type>
</CustomField>