force-app/main/default/objects/Account/fields/Orl_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Orl_Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Registered</fullName>
            </value>
            <value>
                <fullName>Non-Tax Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>