force-app/main/default/objects/Account/fields/Report_Header_1__c.field-meta.xml
<CustomField>
    <fullName>Report_Header_1__c</fullName>
    <label>Report Header 1</label>
    <length>225</length>
    <type>Text</type>
</CustomField>