force-app/main/default/objects/Account/fields/Report_Header_3__c.field-meta.xml
<CustomField>
    <fullName>Report_Header_3__c</fullName>
    <label>Report Header 3</label>
    <length>225</length>
    <type>Text</type>
</CustomField>