force-app/main/default/objects/Account/fields/Retailer_created_by_admin__c.field-meta.xml
<CustomField>
    <fullName>Retailer_created_by_admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retailer created by admin</label>
    <type>Checkbox</type>
</CustomField>