force-app/main/default/objects/Account/fields/Type_of_customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_customer__c</fullName>
    <label>Type of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>