force-app/main/default/objects/Account/recordTypes/Direct_Dealer.recordType-meta.xml
<RecordType>
    <fullName>Direct_Dealer</fullName>
    <active>true</active>
    <label>Direct Dealer</label>
</RecordType>