force-app/main/default/objects/Account/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <label>Distributor</label>
</RecordType>