force-app/main/default/objects/Account/validationRules/Mobile_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_number_validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Mobile__c  ,&quot;(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Please enter the Number only</errorMessage>
</ValidationRule>