force-app/main/default/objects/Account/validationRules/Orl_Validation_for_VAT_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_Validation_for_VAT_Number</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Orl_Tax_Type__c , &quot;Tax Registered&quot;) , ISBLANK( VAT_Number__c )  ,false)</errorConditionFormula>
    <errorDisplayField>VAT_Number__c</errorDisplayField>
    <errorMessage>Please Enter the VAT Number as you are tax registered.</errorMessage>
</ValidationRule>