force-app/main/default/objects/Account/listViews/cgcloud__AllAccounts.listView-meta.xml
<ListView>
    <fullName>cgcloud__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>cgcloud__Account_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>