force-app/main/default/objects/Account/listViews/Direct_Dealer_Accounts.listView-meta.xml
<ListView>
    <fullName>Direct_Dealer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Direct_Dealer</value>
    </filters>
    <label>Direct Dealer Accounts</label>
</ListView>